[package]
name = "warcprox-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hudsucker = { path = "../hudsucker", version = "0.18" }
tracing = { version = "0.1.21", features = ["log"] }
tokio = { version = "1.23.0", features = ["full"] }
tracing-subscriber = "0.3.0"
rcgen = { version = "0.10.0", features = ["x509-parser"] }
hyper = { version = "0.14.23", features = ["stream"] }
futures = "0.3.25"
