[package]
name = "warcprox-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hudsucker = { version = "0.19" }
tracing = { version = "0.1.21", features = ["log"] }
tokio = { version = "1.23.0", features = ["full"] }
tracing-subscriber = "0.3.0"
rcgen = { version = "0.10.0", features = ["x509-parser"] }
futures = "0.3.25"
sha2 = "0.10.6"
base16 = "0.2.1"
tempfile = "3.3.0"
chrono = "0.4.23"
warcio = { git = "https://github.com/nlevitt/warcio-rs" }
clap = "4.0.32"

[patch.crates-io]
hudsucker = { path = "../hudsucker" }
hyper = { path = "../hyper" }
warcio = { path = "../warcio-rs" }
