[package]
name = "warcprox-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hudsucker = { version = "0.19" }
tracing = { version = "0.1.21", features = ["log"] }
tokio = { version = "1.23.0", features = ["full"] }
tracing-subscriber = "0.3.0"
rcgen = { version = "0.10.0", features = ["x509-parser"] }
futures = "0.3.25"
sha2 = "0.10.6"
base16 = "0.2.1"
tempfile = "3.3.0"
chrono = "0.4.23"
warcio = { git = "https://github.com/nlevitt/warcio-rs" }
clap = { version = "4.0.32", features = ["derive"] }
rustls-pemfile = "1.0.1"
hyper-rustls = "0.23.2"

[dev-dependencies]
reqwest = { version = "0.11.13", features = ["rustls-tls"] }
tokio-rustls = "0.23.4"
tls-listener = { version = "0.6.0", features = ["rustls", "hyper-h1", "hyper-h2"] }
test-log = { version = "0.2.11", features = ["trace"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
env_logger = "0.10.0"

# [patch.crates-io]
# hudsucker = { path = "../hudsucker" }
# hyper = { path = "../hyper" }
#
# [patch."https://github.com/nlevitt/warcio-rs"]
# warcio = { path = "../warcio-rs" }
