[package]
name = "test_common"
version = "0.1.0"
edition = "2021"

[dependencies]
warcprox-rs = { path = ".." }
futures = "0.3.25"
hudsucker = { version = "0.19" }
tempfile = "3.3.0"
tls-listener = { version = "0.6.0", features = ["rustls", "hyper-h1", "hyper-h2"] }
tokio-rustls = "0.23.4"
tokio = { version = "1.23.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["rustls-tls"] }
